# torchmodel

./: README.md  pyproject.toml
src/torchmodel/: __init__.py  archs.py  callbacks.py  datasets.py  torchmodel.py
